Update product card to avoid cutoff with long names

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -185,7 +185,7 @@ footer .social-icon > img {
     height: 23rem;
     border: 1px solid var(--color-alt);
     padding: 0.5rem;
-    gap: 0.5rem;
+    gap: 0.25rem;
 
     color: var(--color-text);
     text-decoration: unset;
@@ -214,11 +214,17 @@ footer .social-icon > img {
 }
 
 .product-name {
-    font-size: 1.3rem;
-    text-wrap: nowrap;
+    width: 100%;
+    font-size: 1.2rem;
+    line-height: 1.25;
+
     text-overflow: ellipsis;
-    line-height: 1.3;
+    white-space: break-spaces;
     overflow: hidden;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .product-image {
@@ -465,10 +471,10 @@ footer .social-icon > img {
 }
 
 .cart-btn {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .cart-btn:disabled {
-  cursor: not-allowed;
-  opacity: 0.6;
+    cursor: not-allowed;
+    opacity: 0.6;
 }
